syntax = "proto3";

package dt.pb;

option go_package = "./pb";

service TransService {
    rpc TransIn(TransInReq) returns (TransInReply){};
    rpc TransInRoll(TransInReq) returns (TransInReply){};
    rpc TransOut(TransOutReq) returns (TransOutReply){};
}



message TransInReq{
    string uid  = 1;
    uint32 amount = 2;
}
message TransOutReq{
    string uid = 1;
    uint32 amount = 2;
}
message TransInReply{
    bool success = 1;
}
message TransOutReply{
    bool success = 1;
}
